apps/dex/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  annotations:
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: dex
      port:
        name: http
  tls:
    - hosts:
        - dex
  ingressClassName: tailscale
