apps/dex/overlays/nishir-tailnet/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dex
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: shikanime
      ports:
        - port: http
    - from: []
      ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: dex
